# pgtoolsservice

./: .coveragerc  .flake8  .gitignore  CODEOWNERS  DEVELOPING.md  Dockerfile  License.txt  README.md  ThirdPartyNotices.txt  config.ini  docker-compose.recording.yml  docker-compose.web.yml  docker-compose.yml  index.html  mypy.ini  nose2-junit.xml  nose2.cfg  ossdbtoolsservice_main.py  ossdbtoolsservice_main.spec  ossdbtoolsservice_main.spec.old  pyproject.toml  pytest.ini  requirements.txt  rpc_api_docs.md  setup.cfg  setup.py  test_client.py  websocket-test.html  websocket-test.js
.pipeline/: build-CI.yml  build_ci.yml  build_pullrequest.yml  build_release.yml  build_snap.yml
docs/: Requests.md
dto_generator/: README.md  dto_generator.py  run_dto_generator.ps1  run_dto_generator.sh
env/: pyvenv.cfg
evaluations/: chat_service_wrapper.py  completion_client.py  conftest.py  eval_inputs.py  logging.py  runner.py  settings.py  test_evaluations.py
mysqlsmo/: __init__.py
ossdbtoolsservice/: main.py  ossdbtoolsservice_main.py  ossdbtoolsservice_main_web.py
ostoolsservice/: ostoolsservice_main.py
pgsmo/: __init__.py
pgsqltoolsservice/: __init__.py  connection_service.py  main.py  pgsqltoolsservice.py  pgtoolsservice_main.py  server.py  setup.py  utils.py
sample_requests/: version.json
scripts/: autopep8.ps1  autopep8.sh  build-linux.sh  build-mac.sh  build.ps1  build.sh  docker-build.ps1  docker-build.sh  flake8.ps1  flake8.sh  format.sh  generate_ossdbtoolsservice_rpc_docs.py  get-artifact-name.sh  lint.ps1  lint.sh  load_test_data.sh  test-all-linux.sh  test-all.ps1  test-all.sh  test-integration.ps1  test-integration.sh  test-unit.ps1  test-unit.sh
ssl/: cert.pem  generate_self_signed_cert.ps1  generate_self_signed_cert.sh  key.pem  san.cnf
tests/: mock_request_validation.py  test_batch.py  test_connection_service.py  test_query_execution_service.py  test_server.py  test_utils.py  utilities_tests.py  utils.py
tests_v2/: conftest.py
webserver_client/: Dockerfile  README.md  import_dto.ps1  import_dto.sh  index.html  (+4 more)
(+1750 files in other folders)
