[metadata]
name = ossdbtoolsservice
version = 0.1.0
description = "PostgreSQL Tools Service"
author = Microsoft Corporation
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
install_requires =
    psycopg==3.2.3
    inflection
    sqlparse==0.4.3
    prompt_toolkit==2.0.7
    xlsxwriter
    flask
    flask_cors
    flask-socketio
    gevent
    gevent-websocket
    argparse
    configparser
    jinja2
    debugpy==1.8.7
    python-dateutil
    azure-identity~=1.13
    semantic-kernel~=1.20.0

[options.extras_require]
dev =
    pyinstaller
    nose2
    parameterized
    coverage
    autopep8
    flake8
    pytest
    rich==13.9.4
    click~=8.0
