[metadata]
name = ossdbtoolsservice
version = 0.1.0
description = "PostgreSQL Tools Service"
author = Microsoft Corporation
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
install_requires =
    psycopg[binary, pool]==3.2.4
    inflection
    sqlparse==0.5.0
    prompt_toolkit==2.0.7
    xlsxwriter
    flask
    flask_cors
    flask-socketio
    gevent
    gevent-websocket
    argparse
    configparser
    jinja2
    debugpy==1.8.7
    python-dateutil
    azure-identity~=1.13
    numpy==1.26.4
    semantic-kernel~=1.20.0

[options.extras_require]
dev =
    pyinstaller
    nose2
    parameterized
    coverage
    autopep8
    ruff ~= 0.9
    mypy ~= 1.15
    pytest
    docker~=7.1
    rich==13.9.4
    click~=8.0
    types-python-dateutil
